src/objects/CMSComponent__c.object
<CustomObject>
    <fields>
        <fullName>CSSClasses__c</fullName>
        <description>Here will be stored the CSS Classes for the corresponding Component.</description>
        <label>CSS Classes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Columns__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Columns of the Catalog component in Grid view only</description>
        <inlineHelpText>Set the number of columns for the Grid view only</inlineHelpText>
        <label>Number of Columns</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>    
    <fields>
        <fullName>Content__c</fullName>
        <description>Used on the Content Component to add a free text on the frontend</description>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Delay__c</fullName>
        <description>Used on the Banner Component to set the delay of slider banners</description>
        <inlineHelpText>This is the time that each image will show in the banner type Slider.</inlineHelpText>
        <label>Delay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desktop__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, it is rendered for Desktop Device</description>
        <label>Desktop</label>
        <type>Checkbox</type>
    </fields>        
    <fields>
        <fullName>DetailParameter__c</fullName>
        <defaultValue>&apos;id&apos;</defaultValue>
        <description>The name of the parameter that a list will use to send to a detail component</description>
        <label>Detail parameter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DetailURL__c</fullName>
        <label>Detail URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DetailView__c</fullName>
        <description>This field will determine how the detail an item from a list is displayed.</description>
        <label>Detail view</label>
        <picklist>
            <controllingField>Layout__c</controllingField>
            <picklistValues>
                <fullName>Internal page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accordion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieldSet__c</fullName>
        <label>FieldSet</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsAppMenu__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked the Navigation will be available in the mobile menu (App Menu or Hamburger Menu)</description>
        <label>Is App Menu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LayoutMode__c</fullName>
        <label>Layout Mode</label>
        <picklist>
            <controllingField>Layout__c</controllingField>
            <picklistValues>
                <fullName>Vertical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizontal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Form</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Layout__c</fullName>
        <label>Layout</label>
        <picklist>
            <picklistValues>
                <fullName>Grid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freestyle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <defaultValue>6</defaultValue>
        <inlineHelpText>Set the number of items to show per page</inlineHelpText>
        <label>Items per Page</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, it is rendered for Mobile Device</description>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>    
    <fields>
        <fullName>OrderBy__c</fullName>
        <description>Used on the Catalogo Component to give to the user the option to order the rewards</description>
        <label>Order By</label>
        <picklist>
            <picklistValues>
                <fullName>Name ASC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In which order they are placed within the section</description>
        <inlineHelpText>In what order the components are placed within the section.</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>    
    <fields>
        <fullName>Paging__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this option if you want a paging section</inlineHelpText>
        <label>Paging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParameterName__c</fullName>
        <defaultValue>&apos;id&apos;</defaultValue>
        <description>The name of the argument that a record component use to receive the record that will be shown</description>
        <label>Parameter Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <description>This field will be used just in memory, containing temporarily the Id of the record that the detail is going to be shown.</description>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rows__c</fullName>
        <description>Used on the Catalog Component to set the quantity of rows</description>
        <inlineHelpText>Set the number of rows  for the Grid view only</inlineHelpText>
        <label>Number of Rows</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>    
    <fields>
        <fullName>Tablet__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, it is rendered for Tablet Device</description>
        <label>Tablet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>If you set a title will appear at the top of the component with the title´s style</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Component Width</description>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <recordTypes>
        <fullName>List</fullName>
        <active>true</active>
        <description>Record type for component Transactions, Redemptions, Organization Members, Member Selecction, Branches, Badges</description>
        <label>List</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record</fullName>
        <active>true</active>
        <description>Record type for components that work with a single record</description>
        <label>Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>Widget</fullName>
        <active>true</active>
        <label>Widget</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>    
</CustomObject>